More fileman layout: a quick-fix to make sure we avoid scroll bar with resulting layout issues in file chooser dialog. Remove duplicate function declaration
git-svn-id: svn+ssh://svn.code.sf.net/p/migrid/code/trunk@3080 b75ad72c-e7d7-11dd-a971-7dbc132099af

--- a/mig/images/default.css
+++ b/mig/images/default.css
@@ -659,6 +659,10 @@ table th.icon {
   text-align: center;
 }
 
+.verticalcenter {
+  vertical-align: middle;
+}
+
 .publickey {
   width: 99%;
 }
